--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="uk">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-
-  </head>
-  <body>
-	<script src="index.js"></script>
-  </body>
+    <title>Особистий вебсайт Приймака Євгенія Олександровича</title>
+    <link rel="stylesheet" href="styles.css"> 
+</head>
+<body>
+    <header>
+        <h1>Особистий вебсайт Приймака Євгенія Олександровича</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="labs.html">Лабораторні роботи</a></li>
+            <li><a href="practical.html">Практичні роботи</a></li>
+            <li><a href="about.html">Про мене</a></li>
+        </ul>
+    </nav>
+    <section>
+        <h2>Вітаю!</h2>
+        <p>На цьому сайті ви знайдете інформацію про мене та мої навчальні досягнення.</p>
+        <p>Будь ласка, оберіть розділ, який вас цікавить:</p>
+        <ul>
+            <li><a href="labs.html">Лабораторні роботи</a> - Перейти до лабораторних робіт.</li>
+            <li><a href="practical.html">Практичні роботи</a> - Перейти до практичних робіт.</li>
+            <li><a href="about.html">Про мене</a> - Дізнатися більше про мене.</li>
+        </ul>
+    </section>
+    <footer>
+        <p>2023-2024 | Предмет - WEB технології | Група - КІД42 | Telegram: <a href = https://t.me/La_comrade>La_comrade</a> </p>
+    </footer>
+</body>
 </html>
