--- a/index.html
+++ b/index.html
@@ -13,14 +13,9 @@
 <body> 
 <div class="all">
  <div class="child">
-  <h2>Dominic Waverly</h2>
+  <h2>Сайт Янчука Миколи</h2>
 </div>
   <div class="child">
-<ul class="social-icons-3">
-    <li><a href="#"><i><img src="feys.png" alt=""/></i></a></li>
-    <li><a href="#"><i><img src="inst.png" alt=""/></i></a></li>
-    <li><a href="#"><i><img src="twitter.png" alt=""/></i></a></li>
-</ul>
 </div>
 <img class="portret" src="dominic.jpeg">
 <div class="text2"> 
@@ -34,7 +29,6 @@
 </div>
 <div class="font">
 <div class="font2">
-<h1 class="text3">The child of a jazz pianist and a record store<br> owner, Dominic grew up in a world of diverse<br> sounds.</h1>
 <button class="button2">Learn More</button>
 </div>
 </div>
