--- a/labs.html
+++ b/labs.html
@@ -19,5 +19,8 @@
         <li><a href="promene.html">Про мене</a></li>
     </ul>
 </nav>
+      <ul>
+    <li><a href="lab1.html">Лабораторна №1</a></li>
+</ul>
 </body>
 </html>
