--- a/practic.html
+++ b/practic.html
@@ -22,6 +22,7 @@
 <h2>Список практичних робіт:</h2>
 <ul>
     <li><a href="pr1.html">Практична №1</a></li>
+       <li><a href="practice2.html">Практична №2</a></li>
 </ul>
 </body>
 </html>
