--- a/practic.html
+++ b/practic.html
@@ -23,6 +23,7 @@
 <ul>
     <li><a href="pr1.html">Практична №1</a></li>
        <li><a href="practice2.html">Практична №2</a></li>
+    <li><a href="task3 (1).html">Практична №3</a></li>
 </ul>
 </body>
 </html>
