--- a/practic.html
+++ b/practic.html
@@ -24,6 +24,7 @@
     <li><a href="pr1.html">Практична №1</a></li>
        <li><a href="practice2.html">Практична №2</a></li>
     <li><a href="task3 (1).html">Практична №3</a></li>
+    <li><a href="task4.html">Практична №4</a></li>
 </ul>
 </body>
 </html>
