--- a/practic.html
+++ b/practic.html
@@ -25,6 +25,8 @@
        <li><a href="practice2.html">Практична №2</a></li>
     <li><a href="task3 (1).html">Практична №3</a></li>
     <li><a href="task4.html">Практична №4</a></li>
+        <li><a href="Untitled-1.html">Практична №5</a></li>
+
 </ul>
 </body>
 </html>
